<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.archaeologicalfieldwork.views.hillfort.HillfortView">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      tools:layout_editor_absoluteX="-16dp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

      <androidx.appcompat.widget.Toolbar
          android:id="@+id/toolbarAdd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/appBarLayout"
        android:layout_alignParentBottom="true">


      <Button
          android:id="@+id/chooseImage"
          android:layout_width="379dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="13dp"
          android:layout_marginTop="15dp"
          android:layout_marginEnd="19dp"
          android:background="@color/colorAccent"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:text="@string/button_addImage"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/description" />

      <Button
          android:id="@+id/hillfortLocation"
          android:layout_width="379dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginTop="23dp"
          android:layout_marginEnd="16dp"
          android:background="@color/colorAccent"
          android:paddingTop="8dp"
          android:paddingBottom="8dp"
          android:stateListAnimator="@null"
          android:text="@string/button_location"
          android:textColor="@color/colorPrimary"
          android:textSize="16sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/hillfortImage" />

      <EditText
          android:id="@+id/description"
          android:layout_width="394dp"
          android:layout_height="82dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="9dp"
          android:hint="@string/hint_hillfortDescription"
          android:inputType="text"
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="14sp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/hillfortTitle" />

      <EditText
          android:id="@+id/hillfortTitle"
          android:layout_width="392dp"
          android:layout_height="47dp"
          android:layout_marginStart="10dp"
          android:layout_marginTop="72dp"
          android:autofillHints=""
          android:hint="@string/hint_hillfortTitle"
          android:inputType="text"
          android:maxLength="25"
          android:maxLines="1"
          android:padding="8dp"
          android:textColor="@color/colorPrimaryDark"
          android:textSize="14sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <ImageView
          android:id="@+id/hillfortImage"
          android:layout_width="396dp"
          android:layout_height="110dp"
          android:layout_marginStart="4dp"
          android:layout_marginTop="22dp"
          android:layout_marginEnd="5dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/chooseImage"
          app:srcCompat="@mipmap/ic_launcher" />

      <com.google.android.gms.maps.MapView
          android:id="@+id/mapView"
          android:layout_width="363dp"
          android:layout_height="162dp"
          android:layout_marginStart="180dp"
          android:layout_marginTop="80dp"
          android:layout_marginEnd="181dp"
          android:layout_marginBottom="87dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/hillfortLocation" />
    </androidx.constraintlayout.widget.ConstraintLayout>


  </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>